feat(offer-sign): replace typed-name cursive preview with a drawn signature canvas
The applicant now actually signs the offer instead of typing their
name and watching it render in a cursive font.

Signing block on /careers/intern/offer/sign/[offerId]:
- Pointer-event signature canvas (mouse + touch + pen). HiDPI
  aware via devicePixelRatio scaling, resize-safe via
  ResizeObserver + snapshot-restore. No external dependency.
- "Clear" button resets the canvas; submit button enabled when
  the canvas is non-empty AND the agreement checkbox is ticked.
- On submit, the canvas is serialised to a PNG data URL and
  POSTed as { signatureImage } to /api/v1/applicant/offers/{id}
  /sign.
- After signing, the green confirmation banner renders the saved
  signature image inline so the applicant sees what was captured.

Backend:
- offer.signed_signature_image TEXT column added via idempotent
  SchemaFixupRunner ALTER. Stores the data URL directly; soft
  cap of ~500 KB enforced in signInHouse() so an oversized
  upload can't bloat audit / DB payloads.
- SignRequest gains a signatureImage field and now requires it.
  typedName is optional and silently falls back to
  applicant.fullName so the printed-name audit column is always
  populated.
- ApplicantOfferView exposes signedSignatureImage so the signed
  banner can render it.

Cleanup:
- Removed the next/font Dancing_Script load from app/layout.tsx;
  no longer used now that the cursive text preview is gone.

No new dependencies. No new endpoints. Schema change is one
additive nullable column. Existing /api/v1/applicant/offers/{id}
/sign request shape stays POST-compatible (older clients that
don't send signatureImage will now get a 400 from the validation
gate; this is the intended behavior — drawn signature is
required).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>